--- a/bookmarks/account/templates/base.html
+++ b/bookmarks/account/templates/base.html
@@ -14,7 +14,7 @@
                     <a href="{% url 'dashboard' %}">My dashboard</a>
                 </li>
                 <li {% if section == "images" %}class="selected"{% endif %}>
-                    <a href="#">Images</a>
+                    <a href="{% url "images:list" %}">Images</a>
                 </li>
                 <li {% if section == "people" %}class="selected"{% endif %}>
                     <a href="#">People</a>
@@ -31,7 +31,7 @@
         </span>
     </div>
     {% if messages %}
-        <ul class="messages">
+        <ul class="messages">{% url "images:list" %}
             {% for message in messages %}
                 <li class="{{ message.tags }}">
                     {{ message|safe }}
@@ -44,5 +44,13 @@
         {% block content %}
         {% endblock content %}
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
+    <script>
+        const csrftoken = Cookies.get('csrftoken');
+        document.addEventListener('DOMContentLoaded', (event) => {
+            {% block domready %}
+            {% endblock domready %}
+        })
+    </script>
 </body>
 </html>
